# Tomori

./: .env example  chat_streamlit.py  chat_terminal.py  main.py  pyproject.toml  requirements.txt  启动项目说明.md
src/: __init__.py
src/agent/: LLMModel.py  ReactAgent.py
src/tools/: __init__.py  bangumi_fetch_api.py  bangumi_search_api.py  tool.py
tools/: bangumi_fetch_api.py  bangumi_search_api.py  compress_json.py
